--- a/Server/templates/login.html
+++ b/Server/templates/login.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form action="/login_userinfo" enctype = "multipart/form-data" method = "POST">
+    <form action="/verify" enctype = "multipart/form-data" method = "POST">
         <label for="username">username</label><br>
         <input type="text" id="username" name="username" value="admin"><br>
         <label for="pwd">pwd</label><br>
