--- a/Server/templates/upload.html
+++ b/Server/templates/upload.html
@@ -1,10 +1,14 @@
 <html>
-    
+
 <head>
     <link class="jsbin" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css"
         rel="stylesheet" type="text/css" />
     <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+
     <meta charset=utf-8 />
     <title>JS Bin</title>
     <script>
@@ -22,12 +26,13 @@
         }
     </script>
 </head>
-   <body>
-      <form action = "/uploader" method = "POST" 
-         enctype = "multipart/form-data">
-         <input type = "file" name = "file" onchange="readURL(this);" /><br/><br/>
-         <img id="blah" src="#" alt="your image" /><br/><br/>
-         <input type = "submit"/>
-      </form>   
-   </body>
+
+<body>
+    <form action="/uploader" method="POST" enctype="multipart/form-data">
+        <input type="file" name="file" onchange="readURL(this);return -1" /><br /><br />
+        <img id="blah" src="#" alt="your image" /><br /><br />
+        <input type="submit" />
+    </form>
+</body>
+
 </html>
