--- a/Client/my-app/src/components/pages/Contactus/ContactUs.css
+++ b/Client/my-app/src/components/pages/Contactus/ContactUs.css
@@ -7,12 +7,32 @@
     width: 80%;
     margin: auto;
 }
-.Con-styleimg{ 
-    background: #d9d9d9;  
+/* STYLE-Img */
+.Con-styleimg-miow{
+    background-color: #FF9A8B;
+    background-image: linear-gradient(90deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
     width: 200px; 
-    height:200px;
+    height: 200px;
 }
-
+.Con-styleimg-not{
+    background-color: #0093E9;
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    width: 200px; 
+    height: 200px;
+}
+.Con-styleimg-master{
+    background-color: #21D4FD;
+    background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
+    width: 200px; 
+    height: 200px;
+}
+.Con-styleimg-aum{
+    background-color: #FBAB7E;
+    background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+    width: 200px; 
+    height: 200px;
+}
+/* STYLE-Text */
 .Con-styletext{ 
     background: #ffffff;
     width: 200px;
